Fix button alignment

--- a/src/react-app/CSS/HUD.scss
+++ b/src/react-app/CSS/HUD.scss
@@ -5,10 +5,6 @@ body {
     z-index: 2000;
   }
 }
-
-#btn-mrgn {
-  margin-left: 0px;
-}
 #btm-btn-mrgn {
   margin-left: 5px;
 }
@@ -97,7 +93,7 @@ body {
       width: 100%;
       height: 45px;
       display: flex;
-      margin-left: 0px;
+      margin-left: 5px;
       margin-bottom: 10%;
       .mini-btn {
         border: none;
